--- a/springboot-study/src/main/resources/application.properties
+++ b/springboot-study/src/main/resources/application.properties
@@ -28,9 +28,9 @@ spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 
 #druid数据库连接池配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/lucky_draw?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
+spring.datasource.url=jdbc:mysql://localhost:3306/stu_exam?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=2011secret
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
